--- a/CricketGame/pom.xml
+++ b/CricketGame/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
 
     </dependencies>
 
